Bugfix: adding package to classpath correctly;